--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
+<title>Horiseon Marketing Agency - Accessible Web Solutions</title>
 
 <head>
     <meta charset="UTF-8" />
